# gerar_assinatura

escrever_em_imagem/: Cargo.toml  style.css
escrever_em_imagem/src/: lib.rs  main.rs
gui/: .gitignore  Cargo.toml  build.rs  database.sqlite3
gui/src/: main.rs
gui/ui/: main.slint
mandar_assinatura_email/: Cargo.toml  database.sqlite3
mandar_assinatura_email/src/: main.rs
query/: Cargo.toml  database.sqlite3
query/src/: lib.rs  main.rs
