[package]
name = "escrever_em_imagem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.25"
base64 = "0.22.1"
dirs = "5.0.1"
env_logger = "0.11.3"
image = "0.25.0"
imageproc = "0.25.0"
log = "0.4.21"
maud = "0.26.0"
regex = "1.10.4"
