[package]
name = "gerar_assinatura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"
query = {path= "../query"}
escrever_em_imagem = {path="../escrever_em_imagem"}
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
log = "0.4.21"
env_logger = "0.11.3"
dirs = "5.0.1"

[build-dependencies]
slint-build = "1.5.1"

[profile.release]
strip=true
opt-level="z"
lto=true
