[package]
name = "mandar_assinatura_email"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
escrever_em_imagem = {path="../escrever_em_imagem"}
query = {path="../query"}
lettre = { version = "0.11.7", features = ["tokio1", "tokio1-native-tls"] }
rpassword = "7.3.1"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip=true
# opt-level="z"
lto=true
